# Sudoku

./: .gitignore  CMakeLists.txt  Observer.h  README.md  Subject.cpp  Subject.h  convertWhiteBackground.sh  gridRecognizer.cpp  gridRecognizer.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sudoku  sudoku.cpp  sudoku.h  sudokuSolver.cpp  sudokuSolver.h
